# Ashborn

./: CMakeLists.txt  README.md
.cache/clangd/index/: context.c.F94EBE0982829D2F.idx  egl_context.c.9C121051651CD1D1.idx  glad.c.287F91E035769281.idx  glad.h.CABDA29D4728015B.idx  glfw3.h.1D89F1EB9F5B1626.idx  glfw3native.h.6AEA8B30A7BFCA4F.idx  glx_context.c.644E8248DD8E4384.idx  init.c.DC87012C88537FA2.idx  input.c.CAD89EC29B90909A.idx  internal.h.D646A7BD0D9A8572.idx  khrplatform.h.01A8B1C344007EC7.idx  linux_joystick.c.1D9ACC3A9BB8C210.idx  linux_joystick.h.186FB83C0A03FDC1.idx  main.cpp.1B1128BCCDCE307D.idx  mappings.h.4110379ACA555CB4.idx  monitor.c.660E04547AB792B7.idx  null_init.c.6B14ED31337F612E.idx  null_joystick.c.2B14F6324306CFEB.idx  null_joystick.h.C7C95B0435C747F2.idx  null_monitor.c.8CFFF0B3B13283B0.idx  null_platform.h.90B66F2F297F0989.idx  null_window.c.D48FBF47E3FAB2DE.idx  osmesa_context.c.2A2324A5969E003B.idx  platform.c.44D010A9A87CFFDB.idx  platform.h.30F8381A870BEB3C.idx  posix_module.c.09A887899CCFCA71.idx  posix_poll.c.CBAC984B3009FA73.idx  posix_poll.h.806FCF9848AC64F8.idx  posix_thread.c.F1ADE3024264A67F.idx  posix_thread.h.0AEAE824F116E7BD.idx  posix_time.c.9F6DE28ECF83538A.idx  posix_time.h.E9E3F11293C288F0.idx  vulkan.c.8A6AA960569C90B7.idx  window.c.4FFC1C83A7788892.idx  wl_init.c.3C278F235229600B.idx  wl_monitor.c.D03CB71E39E36645.idx  wl_platform.h.5B19EF36198C5A60.idx  wl_window.c.C963B81B0E7EA43F.idx  x11_init.c.FFBF52C3C72D10BA.idx  x11_monitor.c.587BE7A5D7289617.idx  (+3 more)
src/: main.cpp
